use black bg by default to avoid weird vh issues on mobile (looking at you safari...)

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: black;
 }
 
 .container {
@@ -18,6 +19,8 @@ body {
 
 .top {
     padding: 10rem;
+    color: black;
+    background-color: white;
 
     display: flex;
     flex-direction: row;
@@ -35,7 +38,6 @@ body {
 
 .bottom {
     font-weight: 100;
-    background-color: black;
     color: white;
     padding: 10rem;
 
